--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "smart-webcomponents-react": "^11.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -20,7 +22,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ndev": "next dev",
+    "nbuild": "next build",
+    "nstart": "next start",
+    "nlint": "next lint"
   },
   "eslintConfig": {
     "extends": [
